Creating nav bar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 
+    <!-- METERIAL ICON CDN -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <!-- MAIN CSS FILE -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -26,6 +29,26 @@
 </head>
 
 <body>
+
+    <!-- NAVIGATION BAR START -->
+    <nav class="main_nav white z-depth-0 d_flex align_center">
+
+
+
+        <button class="menu_toggle_btn btn_hover ">
+            <span class="material-icons">
+                menu
+            </span>
+        </button>
+
+        <div class="input-field col s6">
+            <i class="material-icons prefix">mode_edit</i>
+            <textarea id="icon_prefix2" class="materialize-textarea"></textarea>
+            <label for="icon_prefix2">First Name</label>
+        </div>
+
+    </nav>
+    <!-- NAVIGATION BAR END -->
 
 </body>
 
